--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<header class="header">
+    <a routerLink="/">
+        <img src="../../../assets/images/logo.PNG" alt="Télésport Logo" class="header_logo" />
+    </a>
+</header>
