--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,9 @@
-<app-header></app-header>
-<h2>Olympic games app</h2>
-<hr />
-<p>{{ (olympics$ | async)?.length }} data loaded</p>
+<div class="allHeight flexPlacement">
+    <app-header></app-header>
+    <div class="main-content">
+        <h2>Olympic games app</h2>
+        <hr />
+        <p>{{ (olympics$ | async)?.length }} data loaded</p>
+    </div>
+    <app-footer></app-footer>
+</div>
