--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer className="footer">
-    <p className="footer-text">Copyright 2024 TéléSport</p>
+<footer class="footer">
+    <p class="footer-text">Copyright 2024 TéléSport</p>
 </footer>
