Readme, mise en forme page not-found

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,9 @@
-<div class="center">
-  <h2>No corresponding page found</h2>
-  <a routerLink="">Go back</a>
+<div class="allHeight flexPlacement">
+    <app-header></app-header>
+    <div class="main-content">
+        <h1>Olympic games app</h1>
+        <h2>No corresponding page found</h2>
+        <a routerLink="">Go back</a>
+    </div>
+    <app-footer></app-footer>
 </div>
