--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/Utils/Variables.scss";
 
 .header {
-    margin: 15px;
+    margin: 15px 15px 0 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
