--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -7,6 +7,7 @@
         <div *ngIf="!countryData">
             <p>Country data not found.</p>
         </div>
+        <button class="button-home" routerLink="/">Go back</button>
     </div>
     <app-footer></app-footer>
 </div>
