--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="allHeight flexPlacement">
     <app-header></app-header>
     <div class="main-content">
-        <h1>Olympic games app</h1>
+        <h1 class="main-title">Olympic games app</h1>
         <h2 class="graph-title">Medals per Country</h2>
-        <div class="stats-container">
+        <div class="indicator-container">
             <div class="graph-indicator">
                 <p>Number of JOs<br />{{ numberOfGames }}</p>
             </div>
