--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -3,7 +3,7 @@
     <div class="main-content">
         <h1>Olympic games app</h1>
         <h2>No corresponding page found</h2>
-        <a routerLink="">Go back</a>
+        <a class="link" routerLink="/">Go back</a>
     </div>
     <app-footer></app-footer>
 </div>
