--- a/src/styles/Base/Base.scss
+++ b/src/styles/Base/Base.scss
@@ -25,7 +25,6 @@ body {
 .main-content {
     align-items: center;
     justify-content: center;
-    padding: 20px;
     flex: 1;
 }
 
@@ -33,7 +32,8 @@ body {
     background-color: $tertiary-color;
     color: $primary-color;
     border-radius: 10px;
-    padding: 7px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .graph-indicator {
