--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,3 +1,1 @@
-<ngx-charts-pie-chart [results]="data" [view]="view" [explodeSlices]="false" [legend]="false" [labels]="true"
-    (select)="onSelect($event)">
-</ngx-charts-pie-chart>
+<ngx-charts-pie-chart [results]="data" [view]="view" [explodeSlices]="false" [legend]="false" [labels]="true" (select)="onSelect($event)"> </ngx-charts-pie-chart>
