Ajout responsive, modification visuel projet

--- a/src/app/components/country-detail/country-detail.component.scss
+++ b/src/app/components/country-detail/country-detail.component.scss
@@ -4,3 +4,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width: 425px) {
+    .indicator-container {
+        flex-direction: column;
+    }
+}
