--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,10 +5,14 @@
         <h2 class="graph-title">Medals per Country</h2>
         <div class="indicator-container">
             <div class="graph-indicator">
-                <p>Number of JOs<br />{{ numberOfGames }}</p>
+                <p>
+                    Number of JOs<br /><span>{{ numberOfGames }}</span>
+                </p>
             </div>
             <div class="graph-indicator">
-                <p>Number of countries<br />{{ numberOfCountries }}</p>
+                <p>
+                    Number of countries<br /><span>{{ numberOfCountries }}</span>
+                </p>
             </div>
         </div>
         <app-pie-chart></app-pie-chart>
